# FLINT

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  README.md  cantera_reactor.cpp  index.html  install.sh  mkdocs.yml  sitemap.xml
YTF/: index.html
cmake/: LinkDependencies.cmake
database/: index.html
docs/: ALGORITHMS.md  INDEX.md  INPUT_FORMATS.md  INPUT_NATIVE_FORMAT.md  INPUT_YAML_FORMAT.md  TEST_CASES.md  YTF.md  database.md  input.md  input_native.md  input_yaml.md  testing.md  theory.md  theory_equilibrium.md  theory_kinetics.md  theory_thermo.md
input/: index.html
input_native/: index.html
input_yaml/: index.html
search/: search_index.json
src/: CMakeLists.txt
src/app/: CMakeLists.txt  batch.f90
src/lib/: CMakeLists.txt  Lib_CEA_data.f90  Lib_CEA_setup.f90  Lib_CEA_solver.f90  Lib_ChemMech.f90  Lib_Chemistry.f90  Lib_Chemistry_Troe.f90  Lib_Chemistry_data.f90  Lib_Chemistry_falloff.f90  Lib_Chemistry_rhs.f90  Lib_Chemistry_wdot.f90  Lib_ThermoTransport.f90  Lib_Thermodynamic.f90  Load_Chemistry.f90  Load_ThermoTrans.f90  Load_ThermoTransport.f90  Load_cantera.f90
src/lib/Lib_ChemMech/: JLR.f90  TSR-CDF-13.f90  TSR-GP-24.f90  TSR-Rich-31.f90  WD.f90  ZK.f90  ciottoli20.f90  coria.f90  coronetti.f90  cross.f90  ecker.f90  global-H2.f90  pelucchi.f90  singh.f90  smooke.f90  troyes.f90
src/test/: CMakeLists.txt  batch.f90  demo.f90
src/test/CXX/: CMakeLists.txt  test-batchCXX.cpp  utils.h
src/test/Fortran/: CMakeLists.txt  test-CEA.f90  test-batchF.f90  test-thermo.f90  test-wdot.f90
src/test/cantIF/: CMakeLists.txt  test-batch.f90  test-wdot.f90  test0.f90  test1.f90  test2.f90
src/test/cantera-CXX/: CMakeLists.txt  kinetics1.cpp
src/test/cantera-F/: CMakeLists.txt  demo.f90
test/: WD.lay  WD.yaml  coria.yaml  input.ini  plot.py  verification.py
test/CORIA/: plot.lay
test/CORIA/INPUT/: chemistry-info.txt  coria.yaml  input.ini
test/Cross/: chemistry-stoich.txt  input.ini  plot.lay
test/Cross/INPUT/: chemistry-info.txt  cross.yaml  phase.txt
test/Ecker/: chemistry-stoich.txt  ecker.yaml  plot.lay
test/Ecker/INPUT/: chemistry-info.txt  composition.txt  ecker.yaml  input.ini  phase.txt
test/INPUT/: chemistry-stoich.txt  phase.txt
test/Pelucchi/: plot.lay
test/Pelucchi/INPUT/: chemistry-info.txt  input.ini  pelucchi.yaml  phase.txt
test/Smooke/: plot.lay
test/Smooke/INPUT/: chemistry-info.txt  input.ini  phase.txt  smooke.yaml
test/TSR-CDF-13/: plot.lay
test/TSR-CDF-13/INPUT/: TSR-CDF-13.yaml  chemistry-info.txt  input.ini  phase.txt
test/TSR-GP-24/: plot.lay
test/TSR-GP-24/INPUT/: TSR-GP-24.yaml  chemistry-Troe.szplt  chemistry-info.txt  composition.txt  input.ini  phase.txt
test/TSR-Rich-31/: plot.lay
test/TSR-Rich-31/INPUT/: TSR-Rich-31.yaml  chemistry-Troe.szplt  chemistry-info.txt  input.ini  phase.txt  thermo.szplt
test/Troyes/: chemistry-stoich.txt  input.ini  troyes.yaml
test/Troyes/INPUT/: chemistry-Arrhenius.szplt  chemistry-info.txt  input.ini  phase.txt  thermo.szplt  troyes.yaml
test/WD/: chemistry-stoich.txt  input.ini  phase.txt  plot.lay
test/WD/INPUT/: WD.yaml  chemistry-info.txt  composition.txt  phase.txt
test/ZK/INPUT/: ZK.yaml  chemistry-info.txt  composition.txt  input.ini  phase.txt
testing/: index.html
theory/: index.html
theory_equilibrium/: index.html
theory_kinetics/: index.html
theory_thermo/: index.html
utils/: YTF.py
